--- a/src/styles/navbar.scss
+++ b/src/styles/navbar.scss
@@ -1,6 +1,7 @@
 @import './global.scss';
 
 .navbar {
+    max-width: 100%;
     height: 150px;
     padding: 1rem;
 }
@@ -12,7 +13,7 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-around;
-    width: 410px;
+    max-width: 410px;
     height: 150px;
     margin-left: 2rem;
 
@@ -54,7 +55,7 @@
 }
 
 .mobile-navbar {
-    display: flex;
+    display: none;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
@@ -68,6 +69,16 @@
     }
 
     .hamburger {
-        width: 100%;
+        width: 75px;
+    }
+}
+
+@media (max-width: 1000px) {
+    .mobile-navbar {
+        display: flex;
+    }
+
+    .navbar.full {
+        display: none;
     }
 }
